--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://karimasri.github.io/GT/",
   "name": "game",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,8 @@
     "fix": "prettier --write src",
     "lint": "prettier --check src",
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
     "test": "react-scripts test",
     "prepare": "husky install"
   },
